--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -1,7 +1,17 @@
 FROM node as dev
 WORKDIR /app
-COPY package*.json ./
-RUN npm install
-COPY . .
-EXPOSE 3000
+COPY ./ui/package.json .
+RUN npm i
+COPY ./ui .
+EXPOSE 5173
 CMD ["npm", "run", "dev"]
+
+FROM node as prod-builder
+WORKDIR /app
+COPY --from=dev /app .
+RUN npm run build
+
+FROM nginx:alpine
+COPY --from=prod-builder /app/dist /usr/share/nginx/html
+EXPOSE 5173
+CMD ["nginx", "-g", "daemon off;"]
