--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,9 +1,20 @@
 FROM node as dev
 WORKDIR /app
-COPY package.json .
-COPY prisma ./prisma/
+COPY ./api/package.json .
+COPY ./api/prisma ./prisma/
 RUN npm i
-COPY . .
+COPY ./api .
+COPY ./common/ /common
 RUN npx prisma generate --data-proxy
 EXPOSE 1337
 CMD ["npm", "run", "dev"]
+
+FROM node as prod-builder
+WORKDIR /app
+COPY --from=dev /app .
+RUN npm run build
+
+FROM nginx:alpine
+COPY --from=prod-builder /app/dist /usr/share/nginx/html
+EXPOSE 1337
+CMD ["nginx", "-g", "daemon off;"]
