--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -16,5 +16,5 @@
   "lib": ["ESNext"],
   "files": ["../common/types.ts"],
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules"]
 }
