--- a/api/package.json
+++ b/api/package.json
@@ -11,8 +11,9 @@
     "author": "Tyler Brown",
     "type": "module",
     "dependencies": {
+        "@apollo/server": "^4.9.3",
         "@prisma/client": "^4.8.1",
-        "apollo-server": "^3.10.3",
+        "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
@@ -20,20 +21,26 @@
         "uuid": "^9.0.0"
     },
     "devDependencies": {
+        "@types/bcrypt": "^5.0.0",
+        "@types/cookie-parser": "^1.4.3",
+        "@types/cors": "^2.8.13",
         "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.14",
         "@types/jest": "^29.2.3",
+        "@types/jsonwebtoken": "^9.0.2",
         "@types/node": "^18.11.10",
         "@types/pg": "^8.6.5",
         "@types/uuid": "^9.0.0",
         "@typescript-eslint/eslint-plugin": "^5.45.0",
         "@typescript-eslint/parser": "^5.45.0",
+        "bcrypt": "^5.1.1",
         "concurrently": "^7.6.0",
         "eslint": "^8.28.0",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.2.1",
         "jest": "^29.3.1",
+        "jsonwebtoken": "^9.0.2",
         "nodemon": "^2.0.20",
         "prettier": "^2.8.0",
         "prisma": "^4.8.1",
