--- a/api/package.json
+++ b/api/package.json
@@ -2,9 +2,9 @@
     "name": "tableflight-api",
     "version": "1.0.0",
     "description": "GraphQL API for TableFlight",
-    "main": "./dist/api/src/server.js",
+    "main": "./dist/app/src/server.js",
     "scripts": {
-        "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/server.js\" \"npx prisma generate --data-proxy\"",
+        "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/server.js\"",
         "build": "tsc",
         "test": "jest"
     },
@@ -12,12 +12,12 @@
     "type": "module",
     "dependencies": {
         "@apollo/server": "^4.9.3",
-        "@prisma/client": "^4.8.1",
+        "@prisma/client": "^5.2.0",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
-        "dotenv": "^16.0.3",
+        "dotenv": "^16.3.1",
         "express": "^4.18.2",
-        "graphql": "^16.6.0",
+        "graphql": "^16.8.0",
         "uuid": "^9.0.0"
     },
     "devDependencies": {
@@ -25,26 +25,26 @@
         "@types/cookie-parser": "^1.4.3",
         "@types/cors": "^2.8.13",
         "@types/dotenv": "^8.2.0",
-        "@types/express": "^4.17.14",
-        "@types/jest": "^29.2.3",
+        "@types/express": "^4.17.17",
+        "@types/jest": "^29.5.4",
         "@types/jsonwebtoken": "^9.0.2",
-        "@types/node": "^18.11.10",
-        "@types/pg": "^8.6.5",
-        "@types/uuid": "^9.0.0",
-        "@typescript-eslint/eslint-plugin": "^5.45.0",
-        "@typescript-eslint/parser": "^5.45.0",
+        "@types/node": "^20.5.9",
+        "@types/pg": "^8.10.2",
+        "@types/uuid": "^9.0.3",
+        "@typescript-eslint/eslint-plugin": "^6.5.0",
+        "@typescript-eslint/parser": "^6.5.0",
         "bcrypt": "^5.1.1",
-        "concurrently": "^7.6.0",
-        "eslint": "^8.28.0",
+        "concurrently": "^8.2.1",
+        "eslint": "^8.48.0",
         "eslint-config-airbnb-base": "^15.0.0",
-        "eslint-config-prettier": "^8.5.0",
-        "eslint-plugin-prettier": "^4.2.1",
-        "jest": "^29.3.1",
+        "eslint-config-prettier": "^9.0.0",
+        "eslint-plugin-prettier": "^5.0.0",
+        "jest": "^29.6.4",
         "jsonwebtoken": "^9.0.2",
-        "nodemon": "^2.0.20",
-        "prettier": "^2.8.0",
-        "prisma": "^4.8.1",
-        "ts-jest": "^29.0.3",
-        "typescript": "^4.9.3"
+        "nodemon": "^3.0.1",
+        "prettier": "^3.0.3",
+        "prisma": "^5.2.0",
+        "ts-jest": "^29.1.1",
+        "typescript": "^5.2.2"
     }
 }
