build(api+ui): docker node versions to lts

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,19 +1,21 @@
-FROM node as dev
+# Development stage
+FROM node:lts as dev
 WORKDIR /app
-COPY ./api/package.json .
+COPY ./api/package.json ./api/package-lock.json* ./
 COPY ./api/prisma ./prisma/
-RUN npm i
+RUN npm ci
 COPY ./api .
 COPY ./common/ /common
 EXPOSE 1337
 CMD ["npm", "run", "dev"]
-RUN npx prisma migrate dev
 
-FROM node as prod-builder
+# Production build stage
+FROM node:lts as prod-builder
 WORKDIR /app
 COPY --from=dev /app .
 RUN npm run build
 
+# Nginx serving stage
 FROM nginx:alpine
 COPY --from=prod-builder /app/dist /usr/share/nginx/html
 EXPOSE 1337
