build: fix build

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -2,7 +2,7 @@
 FROM node:lts as dev
 WORKDIR /app/api
 COPY ./api .
-COPY ../types.d.ts ../types.d.ts
+COPY common/types.d.ts ../types.d.ts
 RUN npm install
 EXPOSE 1337
 CMD ["npm", "run", "dev"]
@@ -19,3 +19,4 @@ FROM nginx:alpine
 COPY --from=prod-builder /app/dist /usr/share/nginx/html
 EXPOSE 1337
 CMD ["nginx", "-g", "daemon off;"]
+
