--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -10,7 +10,7 @@
     "skipLibCheck": true,
     "paths": {
       "*": ["node_modules/*"],
-      "@/types": ["../common/types.d.ts"]
+      "@/types": ["../types.d.ts"]
     }
   },
   "lib": ["ESNext"],
