--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
     "name": "tableflight-api",
     "version": "1.0.0",
     "description": "GraphQL API for TableFlight",
-    "main": "./dist/server.js",
+    "main": "./dist/src/server.js",
     "scripts": {
         "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/server.js\"",
         "build": "tsc",
