--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -24,6 +24,7 @@
     "exactOptionalPropertyTypes": true,
     "noImplicitOverride": true,
     "noImplicitReturns": true,
+    "noImplicitAny": true,
     "noPropertyAccessFromIndexSignature": true,
     "noUncheckedIndexedAccess": true,
 
