--- a/ui/package.json
+++ b/ui/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "graphql": "^16.8.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "urql": "^4.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
