--- a/ui/package.json
+++ b/ui/package.json
@@ -13,6 +13,7 @@
     "graphql": "^16.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.46.1",
     "urql": "^4.0.5"
   },
   "devDependencies": {
