--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,9 @@
     "name": "tableflight-api",
     "version": "1.0.0",
     "description": "GraphQL API for TableFlight",
-    "main": "./dist/src/server.js",
+    "main": "./dist/server.js",
     "scripts": {
-        "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/server.js\"",
+        "dev": "concurrently \"npx tsc --watch\" \"nodemon --delay 2 dist/server.js\"",
         "build": "tsc",
         "test": "jest"
     },
@@ -22,20 +22,20 @@
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.0",
-        "@types/cookie-parser": "^1.4.3",
-        "@types/cors": "^2.8.13",
+        "@types/cookie-parser": "^1.4.4",
+        "@types/cors": "^2.8.14",
         "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.17",
         "@types/jest": "^29.5.4",
         "@types/jsonwebtoken": "^9.0.2",
-        "@types/node": "^20.5.9",
+        "@types/node": "^20.6.0",
         "@types/pg": "^8.10.2",
         "@types/uuid": "^9.0.3",
-        "@typescript-eslint/eslint-plugin": "^6.5.0",
-        "@typescript-eslint/parser": "^6.5.0",
+        "@typescript-eslint/eslint-plugin": "^6.6.0",
+        "@typescript-eslint/parser": "^6.6.0",
         "bcrypt": "^5.1.1",
         "concurrently": "^8.2.1",
-        "eslint": "^8.48.0",
+        "eslint": "^8.49.0",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-prettier": "^9.0.0",
         "eslint-plugin-prettier": "^5.0.0",
