--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   ],
   "private": true,
   "scripts": {
-    "dev": "prisma generate --schema=server/prisma/schema.prisma && lerna run dev --parallel",
+    "dev": "lerna run dev --parallel",
     "prisma:generate": "prisma generate --schema=server/prisma/schema.prisma",
     "prisma:migrate:dev": "prisma migrate dev --name init --schema=server/prisma/schema.prisma",
     "clean": "lerna clean",
