--- a/ui/package.json
+++ b/ui/package.json
@@ -11,6 +11,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@urql/exchange-auth": "^2.1.6",
     "@urql/exchange-graphcache": "^6.3.3",
     "@urql/exchange-retry": "^1.2.0",
@@ -21,18 +23,27 @@
     "urql": "^4.0.5"
   },
   "devDependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.22.15",
+    "@emotion/babel-plugin-jsx-pragmatic": "^0.2.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.15",
+    "babel-plugin-macros": "^3.1.0",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.29",
     "tailwindcss": "^3.3.3",
+    "twin.macro": "^3.4.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
+  },
+  "babelMacros": {
+    "twin": {
+      "preset": "emotion"
+    }
   }
 }
