--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -5,6 +5,7 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "jsxImportSource": "@emotion/react",
 
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -31,12 +32,12 @@
 
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-  
+
     "baseUrl": ".",
     "paths": {
       "@/types": ["../types.d.ts"]
     }
   },
-  "include": ["src", "../types.d.ts"],
+  "include": ["src", "twin.d.ts", "../types.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
