refactor(ui): extract into new components
* Adds new organism GameView.

* Adds new directory for views .

--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -41,10 +41,11 @@
       "@/molecules": ["./src/components/molecules"],
       "@/organisms": ["./src/components/organisms"],
       "@/typography": ["./src/components/typography"],
+      "@/views": ["./src/components/views"],
       "@/hooks": ["./src/hooks"],
       "@/contexts": ["./src/contexts"],
       "@/styles": ["./src/styles"],
-      "@/utils": ["./src/utils"],
+      "@/utils": ["./src/utils"]
     }
   },
   "include": ["src", "twin.d.ts", "../types.d.ts"],
