--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "graphql": "^16.8.0",
+        "graphql-yoga": "^5.0.0",
         "uuid": "^9.0.0"
     },
     "devDependencies": {
