--- a/server/package.json
+++ b/server/package.json
@@ -5,18 +5,19 @@
     "main": "./dist/server.js",
     "scripts": {
         "dev": "concurrently \"npx tsc --watch\" \"nodemon --delay 2 dist/server.js\"",
-        "build": "tsc",
+        "build": "tsc && ncp src/typeDefs dist/typeDefs",
         "test": "jest"
     },
     "author": "Tyler Brown",
-    "type": "module",
     "dependencies": {
         "@apollo/server": "^4.9.3",
+        "@graphql-tools/load-files": "^7.0.0",
         "@prisma/client": "^5.2.0",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "glob": "^10.3.10",
         "graphql": "^16.8.0",
         "graphql-yoga": "^5.0.0",
         "uuid": "^9.0.0"
@@ -42,6 +43,7 @@
         "eslint-plugin-prettier": "^5.0.0",
         "jest": "^29.6.4",
         "jsonwebtoken": "^9.0.2",
+        "ncp": "^2.0.0",
         "nodemon": "^3.0.1",
         "prettier": "^3.0.3",
         "prisma": "^5.2.0",
