--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "author": "Tyler Brown",
     "dependencies": {
         "@graphql-tools/load-files": "^7.0.0",
+        "@graphql-tools/merge": "^9.0.0",
         "@prisma/client": "^5.2.0",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
