--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
         "@graphql-tools/load-files": "^7.0.0",
         "@graphql-tools/merge": "^9.0.0",
         "@prisma/client": "^5.2.0",
+        "body-parser": "^1.20.2",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
