--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
     "main": "./dist/server.js",
     "scripts": {
         "dev": "concurrently \"npx tsc --watch\" \"nodemon --delay 2 dist/server.js\"",
-        "build": "tsc && ncp src/typeDefs dist/typeDefs",
+        "build": "tsc && cpx \"src/modules/**/*.gql\" dist/modules",
         "test": "jest"
     },
     "author": "Tyler Brown",
@@ -37,13 +37,13 @@
         "@typescript-eslint/parser": "^6.6.0",
         "bcrypt": "^5.1.1",
         "concurrently": "^8.2.1",
+        "cpx": "^1.5.0",
         "eslint": "^8.49.0",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-prettier": "^9.0.0",
         "eslint-plugin-prettier": "^5.0.0",
         "jest": "^29.6.4",
         "jsonwebtoken": "^9.0.2",
-        "ncp": "^2.0.0",
         "nodemon": "^3.0.1",
         "prettier": "^3.0.3",
         "prisma": "^5.2.0",
