--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -11,10 +11,11 @@
     "noImplicitAny": true,
     "paths": {
       "*": ["node_modules/*"],
+      "~/*": ["src/*"],
       "@/types": ["../types.d.ts"]
     }
   },
   "lib": ["ESNext"],
-  "include": ["src/**/*", "../types.d.ts"],
+  "include": ["src/*", "src/**/*", "../types.d.ts"],
   "exclude": ["node_modules"]
 }
