--- a/ui/package.json
+++ b/ui/package.json
@@ -32,7 +32,8 @@
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.15",
     "babel-plugin-macros": "^3.1.0",
-    "eslint": "^8.45.0",
+    "eslint": "^8.54.0",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.29",
