--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "lerna run dev --parallel",
     "prisma:generate": "prisma generate --schema=server/prisma/schema.prisma",
     "prisma:migrate:dev": "prisma migrate dev --name init --schema=server/prisma/schema.prisma",
-    "clean": "lerna clean",
+    "clean": "lerna clean && rm -rf server/dist && rm -rf ui/dist && npm cache clean --force",
     "build": "lerna run build",
     "test": "lerna run test",
     "lint": "lerna run lint",
