--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,6 @@
     "dependencies": {
         "@graphql-tools/load-files": "^7.0.0",
         "@graphql-tools/merge": "^9.0.0",
-        "@prisma/client": "^5.2.0",
         "body-parser": "^1.20.2",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
@@ -23,6 +22,8 @@
         "uuid": "^9.0.0"
     },
     "devDependencies": {
+        "@prisma/client": "^5.6.0",
+        "@prisma/extension-accelerate": "^0.6.2",
         "@types/bcrypt": "^5.0.0",
         "@types/cookie-parser": "^1.4.4",
         "@types/cors": "^2.8.14",
