--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
     "description": "GraphQL API for TableFlight",
     "main": "./dist/server.js",
     "scripts": {
-        "dev": "concurrently \"npx tsc --watch\" \"nodemon --delay 2 dist/server.js\"",
+        "dev": "cpx \"src/modules/**/*.gql\" dist/modules && concurrently \"npx tsc --watch\" \"nodemon --delay 2 dist/server.js\"",
         "build": "tsc && cpx \"src/modules/**/*.gql\" dist/modules",
         "test": "jest"
     },
