--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   ],
   "private": true,
   "scripts": {
-    "dev": "lerna run dev --parallel",
+    "dev": "concurrently \"lerna run dev --stream --parallel\" \"prisma studio --schema=server/prisma/schema.prisma\"",
     "prisma:generate": "prisma generate --schema=server/prisma/schema.prisma",
     "prisma:migrate:dev": "prisma migrate dev --name init --schema=server/prisma/schema.prisma",
     "prisma:studio": "prisma studio --schema=server/prisma/schema.prisma",
@@ -20,6 +20,7 @@
     "prepare": "npm run build"
   },
   "devDependencies": {
+    "concurrently": "^8.2.2",
     "lerna": "^7.2.0"
   }
 }
