--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
         "@types/cors": "^2.8.14",
         "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.17",
+        "@types/figlet": "^1.5.8",
         "@types/jest": "^29.5.4",
         "@types/jsonwebtoken": "^9.0.2",
         "@types/node": "^20.6.0",
