--- a/ui/package.json
+++ b/ui/package.json
@@ -40,7 +40,8 @@
     "tailwindcss": "^3.3.3",
     "twin.macro": "^3.4.0",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^5.2.13",
+    "vitest": "^1.6.0"
   },
   "babelMacros": {
     "twin": {
