--- a/package.json
+++ b/package.json
@@ -8,11 +8,60 @@
     "@nrwl/node": "^19.2.2",
     "@nrwl/react": "^19.2.2",
     "@nrwl/vite": "^19.2.2",
+    "@nx/cypress": "19.2.2",
+    "@nx/esbuild": "19.2.2",
+    "@nx/eslint": "19.2.2",
+    "@nx/eslint-plugin": "19.2.2",
+    "@nx/jest": "19.2.2",
     "@nx/js": "19.2.2",
-    "nx": "19.2.2"
+    "@nx/node": "19.2.2",
+    "@nx/react": "19.2.2",
+    "@nx/vite": "19.2.2",
+    "@nx/web": "19.2.2",
+    "@swc-node/register": "~1.9.1",
+    "@swc/cli": "~0.3.12",
+    "@swc/core": "~1.5.7",
+    "@swc/helpers": "~0.5.11",
+    "@testing-library/react": "15.0.6",
+    "@types/express": "~4.17.13",
+    "@types/jest": "^29.4.0",
+    "@types/node": "18.16.9",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.3.0",
+    "@typescript-eslint/parser": "^7.3.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/coverage-v8": "^1.0.4",
+    "@vitest/ui": "^1.3.1",
+    "cypress": "^13.8.0",
+    "esbuild": "^0.19.2",
+    "eslint": "~8.57.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-cypress": "^2.13.4",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "jest": "^29.4.1",
+    "jest-environment-node": "^29.4.1",
+    "jsdom": "~22.1.0",
+    "nx": "19.2.2",
+    "prettier": "^2.6.2",
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
+    "typescript": "~5.4.2",
+    "vite": "^5.0.0",
+    "vitest": "^1.3.1"
   },
   "workspaces": [
     "apps/*",
     "libs/*"
-  ]
+  ],
+  "dependencies": {
+    "axios": "^1.6.0",
+    "express": "~4.18.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "tslib": "^2.3.0"
+  }
 }
