--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "tableflight-monorepo",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "start": "npx nx run-many --target=serve --projects=api,ui",
+    "dev": "concurrently \"npx nx run-many --target=serve --projects=api,ui\" \"prisma studio --schema=apps/api/prisma/schema.prisma\""
+  },
   "private": true,
   "devDependencies": {
     "@nrwl/node": "^19.2.2",
@@ -18,21 +21,33 @@
     "@nx/react": "19.2.2",
     "@nx/vite": "19.2.2",
     "@nx/web": "19.2.2",
+    "@prisma/client": "^5.15.0",
+    "@prisma/extension-accelerate": "^1.1.0",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.3.12",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@testing-library/react": "15.0.6",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.7",
+    "@types/cors": "^2.8.17",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "~4.17.13",
     "@types/jest": "^29.4.0",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "18.16.9",
+    "@types/pg": "^8.11.6",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.3.0",
     "@typescript-eslint/parser": "^7.3.0",
     "@vitejs/plugin-react": "^4.2.0",
     "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.3.1",
+    "bcrypt": "^5.1.1",
+    "concurrently": "^8.2.2",
+    "cpx": "^1.5.0",
     "cypress": "^13.8.0",
     "esbuild": "^0.19.2",
     "eslint": "~8.57.0",
@@ -45,23 +60,34 @@
     "jest": "^29.4.1",
     "jest-environment-node": "^29.4.1",
     "jsdom": "~22.1.0",
+    "jsonwebtoken": "^9.0.2",
     "nx": "19.2.2",
     "prettier": "^2.6.2",
+    "prisma": "^5.15.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.4.2",
     "vite": "^5.0.0",
     "vitest": "^1.3.1"
   },
+  "dependencies": {
+    "@graphql-tools/load-files": "^7.0.0",
+    "@graphql-tools/merge": "^9.0.4",
+    "axios": "^1.6.0",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "~4.18.1",
+    "graphql": "^16.8.1",
+    "graphql-yoga": "^5.3.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "tslib": "^2.3.0",
+    "uuid": "^9.0.1"
+  },
   "workspaces": [
     "apps/*",
     "libs/*"
-  ],
-  "dependencies": {
-    "axios": "^1.6.0",
-    "express": "~4.18.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "tslib": "^2.3.0"
-  }
+  ]
 }
