build(api): migrate from esbuild to webpack for .gql files

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,8 @@
           {
             "enforceBuildableLibDependency": true,
             "allow": [
+              "~api/*",
+              "~ui/*",
               "@/atoms",
               "@/molecules",
               "@/organisms",
