--- a/apps/api/tsconfig.app.json
+++ b/apps/api/tsconfig.app.json
@@ -6,5 +6,6 @@
     "types": ["node"]
   },
   "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"],
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*.ts", "src/**/*.gql", "gql.d.ts"],
+  "composite": true
 }
