--- a/package.json
+++ b/package.json
@@ -52,7 +52,6 @@
     "autoprefixer": "^10.4.19",
     "bcrypt": "^5.1.1",
     "concurrently": "^8.2.2",
-    "cpx": "^1.5.0",
     "cypress": "^13.8.0",
     "esbuild": "^0.19.2",
     "eslint": "~8.57.0",
@@ -70,6 +69,7 @@
     "postcss": "^8.4.38",
     "prettier": "^3.3.2",
     "prisma": "^5.15.0",
+    "swc-loader": "^0.2.6",
     "tailwindcss": "^3.4.4",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
@@ -83,6 +83,9 @@
     "@emotion/styled": "^11.11.5",
     "@graphql-tools/load-files": "^7.0.0",
     "@graphql-tools/merge": "^9.0.4",
+    "@graphql-tools/utils": "^10.2.2",
+    "@luckycatfactory/esbuild-graphql-loader": "^3.8.1",
+    "@nx/webpack": "^19.3.0",
     "@urql/exchange-auth": "^2.2.0",
     "@urql/exchange-graphcache": "^7.1.1",
     "@urql/exchange-retry": "^1.3.0",
@@ -93,6 +96,7 @@
     "dotenv": "^16.4.5",
     "express": "~4.18.1",
     "graphql": "^16.8.1",
+    "graphql-tag": "^2.12.6",
     "graphql-yoga": "^5.3.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -100,7 +104,8 @@
     "tslib": "^2.3.0",
     "urql": "^4.1.0",
     "uuid": "^9.0.1",
-    "vite-plugin-babel-macros": "^1.0.6"
+    "vite-plugin-babel-macros": "^1.0.6",
+    "webpack-merge": "^5.10.0"
   },
   "workspaces": [
     "apps/*",
