--- a/apps/ui/project.json
+++ b/apps/ui/project.json
@@ -5,5 +5,21 @@
   "projectType": "application",
   "tags": [],
   "// targets": "to see all targets run: nx show project ui --web",
-  "targets": {}
+  "targets": {
+    "lint": {
+      "executor": "@nx/eslint:lint",
+      "options": {
+        "lintFilePatterns": [
+          "apps/ui/src/**/*.ts",
+          "apps/ui/src/**/*.tsx"
+        ]
+      }
+    },
+    "type-check": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "tsc -p apps/ui/tsconfig.app.json --noEmit"
+      }
+    }
+  }
 }
