--- a/package.json
+++ b/package.json
@@ -3,11 +3,26 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
+    "dev:container": "docker-compose up",
     "start": "npx nx run-many --target=serve --projects=api,ui",
     "dev": "concurrently \"npx nx run-many --target=serve --projects=api,ui --output-style=stream\" \"prisma studio --schema=apps/api/prisma/schema.prisma\"",
-    "prisma:generate": "prisma generate --schema=apps/api/prisma/schema.prisma",
-    "prisma:migrate:dev": "prisma migrate dev --name init --schema=apps/api/prisma/schema.prisma",
-    "ui:test": "npx nx run ui:test"
+    "lint": "npx nx run-many --target=lint --projects=api,ui",
+    "type-check": "npx nx run-many --target=type-check --projects=api,ui",
+    "test": "npx nx run-many --target=test --projects=api,ui",
+    "e2e": "npx nx run-many --target=e2e --projects=api-e2e,ui-e2e",
+    "ui:test": "npx nx run ui:test",
+    "ui:build": "npx nx run ui:build",
+    "ui:lint": "npx nx run ui:lint",
+    "ui:type-check": "npx nx run ui:type-check",
+    "ui:container": "npx nx run ui:container",
+    "api:test": "npx nx run api:test",
+    "api:build": "npx nx run api:build",
+    "api:lint": "npx nx run api:lint",
+    "api:type-check": "npx nx run api:type-check",
+    "api:container": "npx nx run api:container",
+    "api:prisma:generate:dev": "prisma generate --schema=apps/api/prisma/schema.prisma",
+    "api:prisma:generate:prod": "prisma generate --schema=apps/api/prisma/schema.prisma --no-engine",
+    "prisma:migrate:dev": "prisma migrate dev --name init --schema=apps/api/prisma/schema.prisma"
   },
   "private": true,
   "devDependencies": {
