--- a/.github/workflows/deploy-to-stage.yml
+++ b/.github/workflows/deploy-to-stage.yml
@@ -65,11 +65,11 @@ jobs:
 
       - name: Install Cert-Manager CRDs
         run: |
-          kubectl apply -f https://github.com/jetstack/cert-manager/releases/latest/download/cert-manager.crds.yaml
+          kubectl apply -f https://github.com/jetstack/cert-manager/releases/latest/download/cert-manager.crds.yml
 
       - name: Install Cert-Manager
         run: |
-          kubectl apply -f https://github.com/jetstack/cert-manager/releases/latest/download/cert-manager.yaml
+          kubectl apply -f https://github.com/jetstack/cert-manager/releases/latest/download/cert-manager.yml
 
       - name: Wait for Cert-Manager to be ready
         run: |
