--- a/.deployment/ui/templates/ingress.yaml
+++ b/.deployment/ui/templates/ingress.yaml
@@ -5,6 +5,7 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
     cert-manager.io/cluster-issuer: {{ .Values.ingress.certIssuer }}
+    nginx.ingress.kubernetes.io/ingress.class: nginx
 spec:
   rules:
     - host: {{ .Values.ingress.host }}
@@ -14,7 +15,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: {{ .Release.Name }}-ui
+                name: ui
                 port:
                   number: 80
   tls:
