--- a/.deployment/ui/templates/ingress.yaml
+++ b/.deployment/ui/templates/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
     cert-manager.io/cluster-issuer: {{ .Values.ingress.certIssuer }}
-    # nginx.ingress.kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
 spec:
   ingressClassName: nginx
   rules:
