--- a/.deployment/api/values.yaml
+++ b/.deployment/api/values.yaml
@@ -1,7 +1,7 @@
 replicaCount: 3
 image:
   repository: 905418147010.dkr.ecr.us-east-2.amazonaws.com/api
-  tag: latest
+  tag: ''
 service:
   type: LoadBalancer
   port: 1337
