--- a/.github/workflows/deploy-to-stage.yml
+++ b/.github/workflows/deploy-to-stage.yml
@@ -69,6 +69,9 @@ jobs:
           docker build -t $ECR_REGISTRY/${{ env.ECR_REPOSITORY_API }}:$TAG -f apps/api/Dockerfile .
           docker push $ECR_REGISTRY/${{ env.ECR_REPOSITORY_API }}:$TAG
 
+      - name: Cleanup Docker images and unused resources
+        run: docker system prune -f 
+        
   deploy-api:
     runs-on: ubuntu-latest
     needs: build-api
