--- a/.github/workflows/deploy-to-stage.yml
+++ b/.github/workflows/deploy-to-stage.yml
@@ -13,34 +13,6 @@ env:
   ECR_REPOSITORY_API: api
 
 jobs:
-  build-ui:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Set up AWS CLI
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
-
-      - name: Log in to Amazon ECR
-        uses: aws-actions/amazon-ecr-login@v1
-        with:
-          region: ${{ env.AWS_REGION }}
-
-      - name: Build and push UI Docker image
-        run: |
-          TAG=${GITHUB_SHA}
-          docker build -t $ECR_REGISTRY/${{ env.ECR_REPOSITORY_UI }}:$TAG -f apps/ui/Dockerfile .
-          docker push $ECR_REGISTRY/${{ env.ECR_REPOSITORY_UI }}:$TAG
-
   build-api:
     runs-on: ubuntu-latest
 
@@ -69,9 +41,37 @@ jobs:
           docker build -t $ECR_REGISTRY/${{ env.ECR_REPOSITORY_API }}:$TAG -f apps/api/Dockerfile .
           docker push $ECR_REGISTRY/${{ env.ECR_REPOSITORY_API }}:$TAG
 
-      - name: Cleanup Docker images and unused resources
+  build-ui:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Set up AWS CLI
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: Log in to Amazon ECR
+        uses: aws-actions/amazon-ecr-login@v1
+        with:
+          region: ${{ env.AWS_REGION }}
+
+      - name: Build and push UI Docker image
+        run: |
+          TAG=${GITHUB_SHA}
+          docker build -t $ECR_REGISTRY/${{ env.ECR_REPOSITORY_UI }}:$TAG -f apps/ui/Dockerfile .
+          docker push $ECR_REGISTRY/${{ env.ECR_REPOSITORY_UI }}:$TAG
+
+      - name: Cleanup Docker images
         run: docker system prune -f 
-        
+
   deploy-api:
     runs-on: ubuntu-latest
     needs: build-api
