--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "scripts": {
     "dev:container": "docker-compose up",
     "start": "npx nx run-many --target=serve --projects=api,ui",
-    "dev": "concurrently \"npx nx run-many --target=serve --projects=api,ui --output-style=stream\" \"prisma studio --schema=apps/api/prisma/schema.prisma\"",
+    "dev": "concurrently \"npx nx run-many --target=serve --projects=api,ui --output-style=stream --configuration=dev\" \"prisma studio --schema=apps/api/prisma/schema.prisma\"",
     "lint": "npx nx run-many --target=lint --projects=api,ui",
     "type-check": "npx nx run-many --target=type-check --projects=api,ui",
     "test": "npx nx run-many --target=test --projects=api,ui",
     "e2e": "npx nx run-many --target=e2e --projects=api-e2e,ui-e2e",
     "ui:test": "npx nx run ui:test",
-    "ui:build": "npx nx run ui:build",
+    "ui:build": "npx nx run ui:build --configuration=prod",
     "ui:lint": "npx nx run ui:lint",
     "ui:type-check": "npx nx run ui:type-check",
     "ui:container": "npx nx run ui:container",
