--- a/package.json
+++ b/package.json
@@ -7,18 +7,19 @@
     "start": "npx nx run-many --target=serve --projects=api,ui",
     "dev": "concurrently \"npx nx run-many --target=serve --projects=api,ui --output-style=stream --configuration=dev\" \"prisma studio --schema=apps/api/prisma/schema.prisma\"",
     "lint": "npx nx run-many --target=lint --projects=api,ui",
-    "type-check": "npx nx run-many --target=type-check --projects=api,ui",
+    "typecheck": "npx nx run-many --target=typecheck --projects=api,ui",
     "test": "npx nx run-many --target=test --projects=api,ui",
     "e2e": "npx nx run-many --target=e2e --projects=api-e2e,ui-e2e",
+    "nuke": "rm -rf node_modules && rm -rf package-lock.json && rm -rf dist && npm cache clean --force",
     "ui:test": "npx nx run ui:test",
     "ui:build": "npx nx run ui:build --configuration=prod",
     "ui:lint": "npx nx run ui:lint",
-    "ui:type-check": "npx nx run ui:type-check",
+    "ui:typecheck": "npx nx run ui:typecheck",
     "ui:container": "npx nx run ui:container",
     "api:test": "npx nx run api:test",
     "api:build": "npx nx run api:build",
     "api:lint": "npx nx run api:lint",
-    "api:type-check": "npx nx run api:type-check",
+    "api:typecheck": "npx nx run api:typecheck",
     "api:container": "npx nx run api:container",
     "api:prisma:generate:dev": "prisma generate --schema=apps/api/prisma/schema.prisma",
     "api:prisma:generate:prod": "prisma generate --schema=apps/api/prisma/schema.prisma --no-engine",
