--- a/apps/ui/project.json
+++ b/apps/ui/project.json
@@ -14,7 +14,7 @@
         ]
       }
     },
-    "type-check": {
+    "typecheck": {
       "executor": "nx:run-commands",
       "options": {
         "command": "tsc -p apps/ui/tsconfig.app.json --noEmit"
