--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "nx": "19.2.2",
     "postcss": "^8.4.38",
     "prettier": "^3.3.2",
+    "prettier-plugin-tailwindcss": "^0.6.5",
     "prisma": "^5.15.0",
     "swc-loader": "^0.2.6",
     "tailwindcss": "^3.4.4",
